--- a/Source/SizeOnDisk/Windows/MainWindow.xaml
+++ b/Source/SizeOnDisk/Windows/MainWindow.xaml
@@ -22,16 +22,8 @@
         <vm:VMRootHierarchy />
     </Window.DataContext>
     <Window.Resources>
-        <cmd:MenuItemTemplateSelector x:Key="menuItemSelector" />
-        <cmd:InverseBooleanConverter x:Key="InverseBooleanConverter" />
-        <cmd:IsEqualConverter x:Key="IsEqualConverter" />
-        <cmd:IsNotEqualConverter x:Key="IsNotEqualConverter" />
-        <cmd:ObjectToTypeStringConverter x:Key="ObjectToTypeStringConverter" />
-        <conv:IsRunningConverter x:Key="IsRunningConverter" />
-        <conv:FileAttributesConverter x:Key="FileAttributesConverter" />
-        <conv:SizeConverter x:Key="SizeConverter" />
         <ContextMenu x:Key="VMContextMenu" DataContext="{Binding PlacementTarget.SelectedItem, RelativeSource={RelativeSource Self}}"
-                     ItemsSource="{Binding Details.FileCommands}" />
+                     ItemsSource="{Binding Details.FileCommands, IsAsync=True}" />
     </Window.Resources>
     <DockPanel 
         cmd:CommandBehavior.Context="{Binding SelectedRootFolder}">
@@ -41,7 +33,7 @@
                 <Button cmd:CommandBehavior.Command="{x:Static vm:VMRootFolder.RefreshCommand}" Padding="3" />
                 <Button cmd:CommandBehavior.Command="{x:Static vm:VMRootFolder.StopCommand}" Padding="3" />
                 <Button cmd:CommandBehavior.Command="{x:Static vm:VMRootFolder.CloseCommand}" Padding="3" />
-                <Button ToolTip="Errors" IsEnabled="{Binding SelectedRootFolder.Logs.Count, Converter={StaticResource IsNotEqualConverter}, ConverterParameter=0, FallbackValue=False}" Click="Button_Click" Padding="3">
+                <Button ToolTip="Errors" IsEnabled="{Binding SelectedRootFolder.Logs.Count, Converter={cmd:IsNotEqualConverter}, ConverterParameter=0, FallbackValue=False}" Click="Button_Click" Padding="3">
                     <cmd:AutoDisablingImage Source="../Icons/Log.png" />
                 </Button>
                 <Separator />
@@ -104,14 +96,14 @@
                 </Grid.RowDefinitions>
                 <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.HardDrivePath, Mode=OneWay}" />
                 <TextBlock Grid.Row="1" Text="Hard drive size" />
-                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveSize,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
+                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
                 <TextBlock Grid.Row="2" Text="{lex:Loc HardDriveUsage}" />
-                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveUsage,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
+                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveUsage,Converter={conv:SizeConverter}, Mode=OneWay}" />
                 <TextBlock Grid.Row="3" Text="{lex:Loc HardDriveFree}" />
-                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveFree,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
+                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedRootFolder.HardDriveFree,Converter={conv:SizeConverter}, Mode=OneWay}" />
 
                 <TextBlock Grid.Row="5" Text="Status" />
-                <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedRootFolder.ExecutionState, Converter={StaticResource IsRunningConverter}, FallbackValue=..., Mode=OneWay}" />
+                <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedRootFolder.ExecutionState, Converter={conv:IsRunningConverter}, FallbackValue=..., Mode=OneWay}" />
                 <TextBlock Grid.Row="6" Text="Running time" />
                 <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedRootFolder.RunTime, Mode=OneWay}" />
                 <TextBlock Grid.Row="7" Text="Threads" />
@@ -119,9 +111,9 @@
 
                 <TextBox Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.Path, Mode=OneWay}" />
                 <TextBlock Grid.Row="1" Grid.Column="2" Text="Total file size" />
-                <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding SelectedRootFolder.FileSize,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
+                <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding SelectedRootFolder.FileSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
                 <TextBlock Grid.Row="2" Grid.Column="2" Text="Total disk size" />
-                <TextBox Grid.Row="2" Grid.Column="3" Text="{Binding SelectedRootFolder.DiskSize,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
+                <TextBox Grid.Row="2" Grid.Column="3" Text="{Binding SelectedRootFolder.DiskSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
                 <TextBlock Grid.Row="3" Grid.Column="2" Text="Total number of folders" />
                 <TextBox Grid.Row="3" Grid.Column="3" Text="{Binding SelectedRootFolder.FolderTotal, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="4" Grid.Column="2" Text="Total number of files" />
@@ -135,9 +127,9 @@
 
                 <TextBox Grid.Column="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="{Binding SelectedRootFolder.SelectedTreeItem.Path, Mode=OneWay}" />
                 <TextBlock Grid.Row="1" Grid.Column="4" Text="Total file size" />
-                <TextBox Grid.Row="1" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileSize,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
+                <TextBox Grid.Row="1" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FileSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
                 <TextBlock Grid.Row="2" Grid.Column="4" Text="Total disk size" />
-                <TextBox Grid.Row="2" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.DiskSize,Converter={StaticResource SizeConverter}, Mode=OneWay}" />
+                <TextBox Grid.Row="2" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.DiskSize,Converter={conv:SizeConverter}, Mode=OneWay}" />
                 <TextBlock Grid.Row="3" Grid.Column="4" Text="Total number of folders" />
                 <TextBox Grid.Row="3" Grid.Column="5" Text="{Binding SelectedRootFolder.SelectedTreeItem.FolderTotal, StringFormat=N0, Mode=OneWay}" />
                 <TextBlock Grid.Row="4" Grid.Column="4" Text="Total number of files" />
@@ -193,7 +185,7 @@
                     </Grid>
                 </ItemsPanelTemplate>
             </StatusBar.ItemsPanel>
-            <StatusBarItem Content="{Binding SelectedRootFolder.ExecutionState, Converter={StaticResource IsRunningConverter}, FallbackValue=...}" />
+            <StatusBarItem Content="{Binding SelectedRootFolder.ExecutionState, Converter={conv:IsRunningConverter}, FallbackValue=...}" />
             <Separator Grid.Column="1" />
             <StatusBarItem Grid.Column="2"
                            Content="{Binding SelectedRootFolder.RunTime}" />
@@ -219,11 +211,11 @@
                            ToolTip="{lex:Loc TotalFiles}" />
             <Separator Grid.Column="13" />
             <StatusBarItem Grid.Column="14"
-                           Content="{Binding SelectedRootFolder.SelectedTreeItem.FileSize, Converter={StaticResource SizeConverter}}"
+                           Content="{Binding SelectedRootFolder.SelectedTreeItem.FileSize, Converter={conv:SizeConverter}}"
                            ToolTip="{lex:Loc TotalFileSize}" />
             <Separator Grid.Column="15" />
             <StatusBarItem Grid.Column="16"
-                           Content="{Binding SelectedRootFolder.SelectedTreeItem.DiskSize, Converter={StaticResource SizeConverter}}"
+                           Content="{Binding SelectedRootFolder.SelectedTreeItem.DiskSize, Converter={conv:SizeConverter}}"
                            ToolTip="{lex:Loc TotalDiskSize}" />
             <Separator Grid.Column="17" />
             <StatusBarItem Grid.Column="18"
@@ -231,11 +223,11 @@
                            ToolTip="{lex:Loc HardDriveUsage}" />
             <Separator Grid.Column="19" />
             <StatusBarItem Grid.Column="20"
-                           Content="{Binding SelectedRootFolder.HardDriveUsage,Converter={StaticResource SizeConverter}}"
+                           Content="{Binding SelectedRootFolder.HardDriveUsage,Converter={conv:SizeConverter}}"
                            ToolTip="{lex:Loc HardDriveUsage}" />
             <Separator Grid.Column="21" />
             <StatusBarItem Grid.Column="22"
-                           Content="{Binding SelectedRootFolder.HardDriveFree,Converter={StaticResource SizeConverter}}"
+                           Content="{Binding SelectedRootFolder.HardDriveFree,Converter={conv:SizeConverter}}"
                            ToolTip="{lex:Loc HardDriveFree}" />
         </StatusBar>
 
@@ -244,7 +236,7 @@
                 <DataTemplate>
                     <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-6,-1">
                         <TextBlock Name="Textbox" Margin="3,4,3,0" Panel.ZIndex="42" Text="{Binding Name}" ToolTip="{Binding Path}" MinWidth="60" TextAlignment="Center" />
-                        <ProgressBar VerticalAlignment="Top" Height="4" Background="Transparent" IsIndeterminate="{Binding ExecutionState, Converter={StaticResource IsRunningConverter}}" BorderThickness="0" />
+                        <ProgressBar VerticalAlignment="Top" Height="4" Background="Transparent" IsIndeterminate="{Binding ExecutionState, Converter={conv:IsRunningConverter}}" BorderThickness="0" />
                     </Grid>
                 </DataTemplate>
             </TabControl.ItemTemplate>
@@ -317,7 +309,7 @@
                                             <RowDefinition Height="96" />
                                             <RowDefinition Height="*" />
                                         </Grid.RowDefinitions>
-                                        <Grid Width="96" Height="96" HorizontalAlignment="Center" VerticalAlignment="Bottom"  IsEnabled="{Binding Attributes, Converter={StaticResource IsNotEqualConverter}, ConverterParameter=Hidden}">
+                                        <Grid Width="96" Height="96" HorizontalAlignment="Center" VerticalAlignment="Bottom"  IsEnabled="{Binding Attributes, Converter={cmd:IsNotEqualConverter}, ConverterParameter=Hidden}">
                                             <Image Panel.ZIndex="42" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Bottom" Source="pack://application:,,,/SizeOnDisk;component/Icons/Shortcut-big.png" 
                                                    Visibility="{Binding IsLink, Converter={StaticResource IsEqualConverter}, ConverterParameter=True}" />
                                             <cmd:AutoDisablingImage Stretch="None" Source="{Binding Details.Thumbnail, IsAsync=True}" HorizontalAlignment="Center" VerticalAlignment="Center" />
@@ -370,7 +362,7 @@
                                 <DataGridTemplateColumn SortMemberPath="IsFile" IsReadOnly="True">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
-                                            <Grid Width="16" Height="16" IsEnabled="{Binding Attributes, Converter={StaticResource IsNotEqualConverter}, ConverterParameter=Hidden}">
+                                            <Grid Width="16" Height="16" IsEnabled="{Binding Attributes, Converter={cmd:IsNotEqualConverter}, ConverterParameter=Hidden}">
                                                 <Image Stretch="None" Panel.ZIndex="42" HorizontalAlignment="Left" VerticalAlignment="Bottom" Source="pack://application:,,,/SizeOnDisk;component/Icons/Shortcut-small.png" 
                                                        Visibility="{Binding IsLink, Converter={StaticResource IsEqualConverter}, ConverterParameter=True}" />
                                                 <cmd:AutoDisablingImage Stretch="None" Source="{Binding Details.Icon, IsAsync=True}" HorizontalAlignment="Center" VerticalAlignment="Center" />
@@ -379,7 +371,7 @@
                                     </DataGridTemplateColumn.CellTemplate>
                                 </DataGridTemplateColumn>
                                 <DataGridTextColumn Header="{lex:Loc Name}"
-                                        Binding="{Binding Name, NotifyOnValidationError=True}"
+                                        Binding="{Binding Name}"
                                         ElementStyle="{StaticResource ColoredName}" />
                                 <DataGridTextColumn Header="Ext"
                                         IsReadOnly="True"
@@ -387,7 +379,7 @@
                                 <DataGridTextColumn Header="{lex:Loc FileType}"
                                         IsReadOnly="True"
                                         Binding="{Binding Details.FileType}" />
-                                <DataGridTextColumn Binding="{Binding Attributes,Converter={StaticResource FileAttributesConverter}}"
+                                <DataGridTextColumn Binding="{Binding Attributes,Converter={conv:FileAttributesConverter}}"
                                         Header="{lex:Loc Attributes}"
                                         IsReadOnly="True" />
                                 <DataGridTextColumn Header="{lex:Loc FolderTotal}"
@@ -400,11 +392,11 @@
                                         IsReadOnly="True" />
                                 <DataGridTextColumn Header="{lex:Loc FileSize}"
                                         ElementStyle="{StaticResource RightAlignStyle}"
-                                        Binding="{Binding FileSize,Converter={StaticResource SizeConverter}}"
+                                        Binding="{Binding FileSize,Converter={conv:SizeConverter}}"
                                         IsReadOnly="True" />
                                 <DataGridTextColumn Header="{lex:Loc DiskSize}"
                                         ElementStyle="{StaticResource RightAlignStyle}"
-                                        Binding="{Binding DiskSize,Converter={StaticResource SizeConverter}}"
+                                        Binding="{Binding DiskSize,Converter={conv:SizeConverter}}"
                                         IsReadOnly="True" />
                                 <DataGridTextColumn Binding="{Binding Details.CreationTime}"
                                         Header="{lex:Loc DateCreation}"
@@ -423,6 +415,6 @@
         </TabControl>
     </DockPanel>
     <Window.TaskbarItemInfo>
-        <TaskbarItemInfo ProgressState="{Binding IsRunning, Converter={StaticResource IsRunningConverter}}" />
+        <TaskbarItemInfo ProgressState="{Binding IsRunning, Converter={conv:IsRunningConverter}}" />
     </Window.TaskbarItemInfo>
 </Window>
