--- a/Source/SizeOnDisk/Windows/MainWindow.xaml
+++ b/Source/SizeOnDisk/Windows/MainWindow.xaml
@@ -327,19 +327,14 @@
                               ItemsSource="{Binding DummyMe}"
                               ContextMenu="{StaticResource VMContextMenu}"
                               DisplayMemberPath="Name"
-                              SelectedValuePath="Path"
                               cmd:ControlBehavior.FocusMouseRightButtonDown="True">
                             <TreeView.ItemContainerStyle>
                                 <Style TargetType="{x:Type TreeViewItem}">
                                     <Setter Property="cmd:TreeViewItemBehavior.IsBroughtIntoViewWhenSelected" Value="True" />
-                                    <Setter Property="Padding"
-                                Value="3,0,3,1" />
-                                    <Setter Property="IsExpanded"
-                                Value="{Binding IsExpanded, Mode=TwoWay}" />
-                                    <Setter Property="IsSelected"
-                                Value="{Binding IsTreeSelected, Mode=TwoWay}" />
-                                    <Setter Property="ItemsSource"
-                                Value="{Binding Folders}" />
+                                    <Setter Property="Padding" Value="3,0,3,1" />
+                                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+                                    <Setter Property="IsSelected" Value="{Binding IsTreeSelected, Mode=TwoWay}" />
+                                    <Setter Property="ItemsSource" Value="{Binding Folders}" />
                                     <Setter Property="HeaderTemplate">
                                         <Setter.Value>
                                             <DataTemplate >
