--- a/SizeOnDisk/Windows/MainWindow.xaml
+++ b/SizeOnDisk/Windows/MainWindow.xaml
@@ -358,6 +358,7 @@
                                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                                 ContextMenu="{StaticResource VMContextMenu}"
                                 cmd:SelectorBehavior.SyncIsSelectedWhenSelected="IsSelected"
+                                  cmd:SelectorBehavior.IsBroughtIntoViewWhenSelected="True"
                                 Panel.ZIndex="{Binding ViewMode, Mode=OneWay, Converter={StaticResource IsEqualConverter}, ConverterParameter={x:Static vm:VMViewMode.Tile}}">
                             <ListView.Resources>
                                 <Style TargetType="ListViewItem">
@@ -413,7 +414,6 @@
                                     <EventSetter Event="MouseDoubleClick" Handler="Selector_MouseDoubleClick"/>
                                 </Style>
                                 <Style TargetType="DataGridCell">
-                                    <Setter Property="Padding" Value="1,0" />
                                     <Setter Property="Template">
                                         <Setter.Value>
                                             <ControlTemplate TargetType="{x:Type DataGridCell}">
